@@ -1,5 +1,15 @@
 2011-09-29  Yuqiang Xian  <yuqiang.xian@intel.com>
 
+        Bug fixes for CreateThis, NewObject and GetByOffset in JSVALUE32_64 DFG JIT
+        https://bugs.webkit.org/show_bug.cgi?id=69075
+
+        Reviewed by Gavin Barraclough.
+
+        * dfg/DFGSpeculativeJIT32_64.cpp:
+        (JSC::DFG::SpeculativeJIT::compile):
+
+2011-09-29  Yuqiang Xian  <yuqiang.xian@intel.com>
+
         JSVALUE32_64 DFG JIT failed to be built on 32-bit Linux due to incorrect overloaded OpInfo constructor
         https://bugs.webkit.org/show_bug.cgi?id=69054
 
